--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -143,18 +143,6 @@
         <div class="w-75 swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="card-webinars card text-center" style="width: 18rem;">
-                        <i>Gratis</i>
-                        <img src="../assets/images/curso-webinars-gratis.webp" class="card-image card-img-top"
-                            alt="Cursos gratuitos">
-                        <div class="card-body body-card__one-line">
-                            <h5 class="card-title">Webinars & Workshops</h5>
-                            <a data-bs-toggle="modal" data-bs-target="#exampleModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
                     <div class="card text-center" style="width: 18rem;">
                         <img src="../assets/images/curso-seleccion-personal.webp" class="card-image card-img-top"
                             alt="Seleccion de personal">
@@ -178,6 +166,81 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-inteligencia-emocional.webp" class="card-image card-img-top"
+                            alt="Cursos gratuitos">
+                        <div class="card-body">
+                            <h5 class="card-title">Inteligencia <br>
+                                emocional</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#inteligenciaEmocionalModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-community-management.webp" class="card-image card-img-top"
+                            alt="Community
+                            management">
+                        <div class="card-body">
+                            <h5 class="card-title">Community
+                                management</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#pnlModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-insercion-laboral.webp" class="card-image card-img-top"
+                            alt="Inserción laboral & Perfil profesional">
+                        <div class="card-body">
+                            <h5 class="card-title">Inserción laboral & <br>
+                                Perfil profesional</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#insercionLaboralModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-phyton.webp" class="card-image card-img-top"
+                            alt="Python: fundamentos
+                            & desarrollo">
+                        <div class="card-body">
+                            <h5 class="card-title">Python: fundamentos
+                                & desarrollo</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#insercionLaboralModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-programacion-html-css.webp" class="card-image card-img-top"
+                            alt="Programación Web
+                            con HTML & CSS">
+                        <div class="card-body">
+                            <h5 class="card-title">Programación Web
+                                con HTML & CSS</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#insercionLaboralModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-orientacion-laboral.webp" class="card-image card-img-top"
+                            alt="Orientación vocacional & Ocupacional">
+                        <div class="card-body">
+                            <h5 class="card-title">Orientación vocacional <br>
+                                & Ocupacional</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#orientacionModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
                         <img src="../assets/images/curso-coaching.webp" class="card-image card-img-top" alt="Coaching">
                         <div class="card-body body-card__one-line">
                             <h5 class="card-title">Coaching
@@ -192,7 +255,7 @@
                         <img src="../assets/images/curso-pnl.webp" class="card-image card-img-top"
                             alt="Programación neurolingüística">
                         <div class="card-body">
-                            <h5 class="card-title">PNL: Programación <br>
+                            <h5 class="card-title">Programación <br>
                                 neurolingüística</h5>
                             <a data-bs-toggle="modal" data-bs-target="#pnlModal" id="btn-open-modal"
                                 class="button-card btn">¡Quiero + info!</a>
@@ -200,16 +263,161 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-blockchain-criptomonedas.webp" class="card-image card-img-top"
+                            alt="Programación neurolingüística">
+                        <div class="card-body">
+                            <h5 class="card-title">Blockchain &
+                                Criptomonedas</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#pnlModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-scrum.webp" class="card-image card-img-top"
+                            alt="Metodologías ágiles">
+                        <div class="card-body body-card__one-line">
+                            <h5 class="card-title">Metodologías ágiles</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#scrumModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div> 
                 </div>
                 <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-asistente-rrhh.webp" class="card-image card-img-top"
+                            alt="Recursos Humanos">
+                        <div class="card-body body-card__one-line">
+                            <h5 class="card-title">Recursos Humanos</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-mindfulness.webp" class="card-image card-img-top"
+                            alt="Mindfulness">
+                        <div class="card-body body-card__one-line">
+                            <h5 class="card-title">Mindfulness</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-diseño-ux-ui.webp" class="card-image card-img-top"
+                            alt="Diseño UX UI">
+                        <div class="card-body body-card__one-line">
+                            <h5 class="card-title">Diseño UX UI</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-finanzas-personales.webp" class="card-image card-img-top"
+                            alt="Finanzas
+                            personales">
+                        <div class="card-body body-card__one-line">
+                            <h5 class="card-title">Finanzas
+                                personales</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-javascript-desde-cero.webp" class="card-image card-img-top"
+                            alt="JavaScript
+                            desde cero">
+                        <div class="card-body body-card__one-line">
+                            <h5 class="card-title">JavaScript
+                                desde cero</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-marketing-digital.webp" class="card-image card-img-top"
+                            alt="Marketing
+                            digital">
+                        <div class="card-body body-card__one-line">
+                            <h5 class="card-title">Marketing
+                                digital</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-liderazgo-gestion-equipos.webp" class="card-image card-img-top"
+                            alt="Liderazgo & Gestión de equipos">
+                        <div class="card-body">
+                            <h5 class="card-title">Liderazgo & <br>
+                                Gestión de equipos</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-negociacion-ventas.webp" class="card-image card-img-top"
+                            alt="Negociación
+                            & Ventas">
+                        <div class="card-body">
+                            <h5 class="card-title">Negociación
+                                & Ventas</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-emprendedurismo-.mindset.webp" class="card-image card-img-top"
+                            alt="Emprendedurismo
+                            & Mindset">
+                        <div class="card-body">
+                            <h5 class="card-title">Emprendedurismo
+                                & Mindset</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-herramientas-informaticas.webp" class="card-image card-img-top"
+                            alt="Herramientas
+                            informáticas">
+                        <div class="card-body">
+                            <h5 class="card-title">Herramientas
+                                informáticas</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="../assets/images/curso-idiomas.webp" class="card-image card-img-top"
+                            alt="Idiomas">
+                        <div class="card-body">
+                            <h5 class="card-title">Idiomas</h5>
+                            <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-open-modal"
+                                class="button-card btn">¡Quiero + info!</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -2261,7 +2469,7 @@
             effect: "coverflow",
             grabCursor: true,
             centeredSlides: true,
-            initialSlide: 3,
+            initialSlide: 12,
             slidesPerView: "auto",
             coverflowEffect: {
                 rotate: 50,
@@ -2293,7 +2501,7 @@
 
         .swiper-slide img {
             display: block;
-            width: 90%;
+            width: 80%;
         }
     </style>
 
