pop-up actualizado

--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -149,7 +149,7 @@
                         <div class="card-body body-card__one-line">
                             <h5 class="card-title">Selección de personal</h5>
                             <a data-bs-toggle="modal" data-bs-target="#seleccionPersonalModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                             <h5 class="card-title">Selección de <br>
                                 personal IT</h5>
                             <a data-bs-toggle="modal" data-bs-target="#seleccionPersonalITModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -172,7 +172,7 @@
                             <h5 class="card-title">Inteligencia <br>
                                 emocional</h5>
                             <a data-bs-toggle="modal" data-bs-target="#inteligenciaEmocionalModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                             <h5 class="card-title">Community
                                 management</h5>
                             <a data-bs-toggle="modal" data-bs-target="#CommunityManagementModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -197,7 +197,7 @@
                             <h5 class="card-title">Inserción laboral & <br>
                                 Perfil profesional</h5>
                             <a data-bs-toggle="modal" data-bs-target="#insercionLaboralModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                             <h5 class="card-title">Python: fundamentos
                                 & desarrollo</h5>
                             <a data-bs-toggle="modal" data-bs-target="#PythonModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                             <h5 class="card-title">Programación Web
                                 con HTML & CSS</h5>
                             <a data-bs-toggle="modal" data-bs-target="#HtmlModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
                             <h5 class="card-title">Orientación vocacional <br>
                                 & Ocupacional</h5>
                             <a data-bs-toggle="modal" data-bs-target="#orientacionModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                             <h5 class="card-title">Coaching
                             </h5>
                             <a data-bs-toggle="modal" data-bs-target="#CoachingModal" id="btn-open-modal"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -258,7 +258,7 @@
                             <h5 class="card-title">Programación <br>
                                 neurolingüística</h5>
                             <a data-bs-toggle="modal" data-bs-target="#pnlModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -270,7 +270,7 @@
                             <h5 class="card-title">Blockchain &
                                 Criptomonedas</h5>
                             <a data-bs-toggle="modal" data-bs-target="#pnlModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -281,7 +281,7 @@
                         <div class="card-body body-card__one-line">
                             <h5 class="card-title">Metodologías ágiles</h5>
                             <a data-bs-toggle="modal" data-bs-target="#scrumModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div> 
                 </div>
@@ -292,7 +292,7 @@
                         <div class="card-body body-card__one-line">
                             <h5 class="card-title">Recursos Humanos</h5>
                             <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-proxima"
-                                class="button-card btn ">¡Quiero + info!</a>
+                                class="button-card btn ">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                         <div class="card-body body-card__one-line">
                             <h5 class="card-title">Mindfulness</h5>
                             <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -314,7 +314,7 @@
                         <div class="card-body body-card__one-line">
                             <h5 class="card-title">Diseño UX UI</h5>
                             <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
                             <h5 class="card-title">Finanzas
                                 personales</h5>
                             <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -340,7 +340,7 @@
                             <h5 class="card-title">JavaScript
                                 desde cero</h5>
                             <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -353,7 +353,7 @@
                             <h5 class="card-title">Marketing
                                 digital</h5>
                             <a data-bs-toggle="modal" data-bs-target="#recursosHumanosModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -365,7 +365,7 @@
                             <h5 class="card-title">Liderazgo & <br>
                                 Gestión de equipos</h5>
                             <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -378,7 +378,7 @@
                             <h5 class="card-title">Negociación
                                 & Ventas</h5>
                             <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -391,7 +391,7 @@
                             <h5 class="card-title">Emprendedurismo
                                 & Mindset</h5>
                             <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -404,7 +404,7 @@
                             <h5 class="card-title">Herramientas
                                 informáticas</h5>
                             <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -415,7 +415,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Idiomas</h5>
                             <a data-bs-toggle="modal" data-bs-target="#liderazgoGestionModal" id="btn-proxima"
-                                class="button-card btn">¡Quiero + info!</a>
+                                class="button-card btn">VER + INFO</a>
                         </div>
                     </div>
                 </div>
@@ -441,7 +441,7 @@
             </div>
             <div class="footer-middle">
                 <ul class="footer-middle__list">
-                    <li><a href="cursos-talleres.html">Cursos & Talleres</a></li>
+                    <li><a href="cursos-talleres.html">Cursos & Capacitaciones</a></li>
                 </ul>
             </div>
             <div class="footer-right">
@@ -716,6 +716,7 @@
             grabCursor: true,
             centeredSlides: true,
             initialSlide: 12,
+            loop: true,
             slidesPerView: "auto",
             coverflowEffect: {
                 rotate: 50,
@@ -729,6 +730,21 @@
             },
         });
     </script>
+    <!-- Estilo Sweet Alert (modificar margen del texto) -->
+    <style>
+        .swal2-html-container{
+            margin: 0.5em 1.6em 0.3em;
+        }
+        .swal2-close{
+            color: var(--amarillo);
+        }
+        .swal2-close:focus{
+            box-shadow: none;
+        }
+        .swal2-close:hover{
+            color: var(--amarillo);
+        }
+    </style>
     <!-- Estilos Swiper -->
     <style>
         .swiper {
