--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -432,7 +432,11 @@
             <h3 class="subtitulo_somosMas">Gracias por formar parte.</h3>
         </div>
         <div>
-            <img class="contador_somosMas" src="/assets/images/gif-datos.gif" alt="Contador">
+            <img class="contador_somosMas" src="/assets/images/gif-datos (1).gif" alt="Contador">
+
+        </div>
+        <div>
+            <p class="textoContador">Clases grabadas para ver a tu ritmo, las veces que quieras y desde cualquier lugar.</p>
         </div>
     </section>
     <section>
@@ -444,6 +448,7 @@
                 <div class="card__containerImage">
                     <img class="card__image" src="/assets/images/plan-anual.png"
                         alt="Plan anual">
+                        
                 </div class="d-flex flex-wrap ">
                 <div class="card__particulares-text d-flex flex-column">
                     <h3 class="card__particulares-title">Plan Anual</h3>
