--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -109,7 +109,10 @@
         <div class="container-fluid">
             <div class="row d-flex align-items-center">
                 <div class="col-8">
-                    <img class="img-fluid" src="../assets/images/prueba-pc-campus.png" alt="pc">
+                    <video autoplay="autoplay" class="img-fluid">
+                        <source src="../assets/videos/video-campus-enlazar.mp4">
+                    </video>
+                    <!-- <img class="img-fluid" src="../assets/images/prueba-pc-campus.png" alt="pc"> -->
                 </div>
                 <div class="col-4 d-flex flex-column align-items-start campus-texto">
                     <p class="parrafo-camino"> <span> Todo largo camino comienza por el primer paso.</span> Hacete
@@ -426,19 +429,23 @@
     </section>
     <!-- Inicio seccion somos mas -->
     
+    <!-- Seccion Cada vez somos mas -->
     <section class="seccion_somosMas">
         <div>
-            <h1 class="titulo_somosMas">¡Cada vez somos más!</h1>
+            <h2 class="titulo_somosMas">¡Cada vez somos más!</h2>
             <h3 class="subtitulo_somosMas">Gracias por formar parte.</h3>
         </div>
-        <div>
-            <img class="contador_somosMas" src="/assets/images/gif-datos (1).gif" alt="Contador">
+        <div class="gifSomosMas">
+            <img class="contador_somosMas" src="../assets/images/gif-datos (1).gif" alt="Contador">
 
         </div>
         <div>
-            <p class="textoContador">Clases grabadas para ver a tu ritmo, las veces que quieras y desde cualquier lugar.</p>
+            <p class="textoContador">Clases grabadas para ver a tu ritmo, las veces </p>
+            <p class="textoContador">que quieras y desde cualquier lugar.</p>
         </div>
     </section>
+
+
     <section>
         <div>
             <h2 class="titulo__Plan">Plan único con acceso a todo el Campus</h2>
@@ -446,7 +453,7 @@
         <div>
             <div class="container-card_planAnual mb-5">
                 <div class="card__containerImage">
-                    <img class="card__image" src="/assets/images/plan-anual.png"
+                    <img class="card__image" src="../assets/images/plan-anual.png"
                         alt="Plan anual">
                         
                 </div class="d-flex flex-wrap ">
@@ -469,7 +476,7 @@
             </div>
             <div class="container-card_planAnual mb-5">
                 <div class="card__containerImage_amigo">
-                    <img class="card__image_amigo" src="/assets/images/regalo-amigo.png"
+                    <img class="card__image_amigo" src="../assets/images/regalo-amigo.png"
                         alt="Plan anual">
                 </div class="d-flex flex-wrap ">
                 <div class="card__particulares-text d-flex flex-column">
