cambio links redes

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -78,7 +78,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 flex-row justify-content-evenly">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.instagram.com/consultora.enlazar/" target="_blank"><img
+                        <a class="nav-link" href="https://www.instagram.com/enlazar.ok/" target="_blank"><img
                                 src="../assets/images/logo-instagram.svg" alt="Logo Instagram" width="20"></a>
                     </li>
                     <li class="nav-item">
@@ -86,17 +86,17 @@
                                 src="../assets/images/logo-telegram.svg" alt="Logo Telegram" width="20"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/company/consultora-enlazar/"
+                        <a class="nav-link" href="https://www.linkedin.com/company/enlazar"
                             target="_blank"><img class="nav-link__instagram-linkedin"
                                 src="../assets/images/logo-linkedin.svg" alt="Logo Linkedin" width="20"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.facebook.com/Consultora.enlazar/" target="_blank"><img
+                        <a class="nav-link" href="https://www.facebook.com/enlazar.ok/" target="_blank"><img
                                 class="nav-link__instagram-linkedin" src="../assets/images/logo-facebook.svg"
                                 alt="Logo Facebook" width="20"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://twitter.com/EnlazarC" target="_blank"><img
+                        <a class="nav-link" href="https://twitter.com/Enlazar_ok" target="_blank"><img
                                 src="../assets/images/logo-twitter.svg" alt="Logo Twitter" width="20"></a>
                     </li>
                 </ul>
@@ -241,18 +241,18 @@
             <div class="footer-right">
                 <ul class="footer-right__list">
                     <li>Descubrí nuestra comunidad</li>
-                    <li><a href="https://www.instagram.com/consultora.enlazar/" target="_blank"><img
+                    <li><a href="https://www.instagram.com/enlazar.ok/" target="_blank"><img
                                 class="instagram-logo" src="../assets/images/logo-instagram.svg"
                                 alt="Logo instagram"></a></li>
                     <li><a href="https://t.me/joinchat/e8dtvJ5XB2k1MGIx" target="_blank"><img class="telegram-logo"
                                 src="../assets/images/logo-telegram.svg" alt="Logo telegram"></a></li>
-                    <li><a href="https://www.linkedin.com/company/consultora-enlazar/" target="_blank"><img
+                    <li><a href="https://www.linkedin.com/company/enlazar" target="_blank"><img
                                 class="telegram-logo" src="../assets/images/logo-linkedin.svg" alt="Logo Linkedin"></a>
                     </li>
-                    <li><a href="https://www.facebook.com/Consultora.enlazar/" target="_blank"><img
+                    <li><a href="https://www.facebook.com/enlazar.ok/" target="_blank"><img
                                 class="telegram-logo" src="../assets/images/logo-facebook.svg" alt="Logo Facebook"></a>
                     </li>
-                    <li><a href="https://twitter.com/EnlazarC" target="_blank"><img class="twitter-logo"
+                    <li><a href="https://twitter.com/Enlazar_ok" target="_blank"><img class="twitter-logo"
                                 src="../assets/images/logo-twitter.svg" alt="Logo twitter"></a></li>
                 </ul>
             </div>
