--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -450,7 +450,7 @@
         <div>
             <h2 class="titulo__Plan">Plan único con acceso a todo el Campus</h2>
         </div>
-        <div>
+        <div class="Contenedor__cards">
             <div class="container-card_planAnual mb-5">
                 <div class="card__containerImage">
                     <img class="card__image" src="../assets/images/plan-anual.png"
@@ -459,7 +459,7 @@
                 </div class="d-flex flex-wrap ">
                 <div class="card__particulares-text d-flex flex-column">
                     <h3 class="card__title">Plan Anual</h3>
-                    <p class="card__particulares-paragraph">· Acceso a más de 15 cursos y capacitaciones
+                    <p class="contenido__card">· Acceso a más de 15 cursos y capacitaciones
                         · Primera clase GRATIS
                         · Acceso a webinars y workshops GRATUITOS
                         · Acceso al mejor material de estudio
@@ -481,7 +481,7 @@
                 </div class="d-flex flex-wrap ">
                 <div class="card__particulares-text d-flex flex-column">
                     <h3 class="card__title">Regalar a un amigo</h3>
-                    <p class="card__particulares-paragraph">¡Porque el conocimiento es poder!
+                    <p class="contenido__card">¡Porque el conocimiento es poder!
                         Sorprendé a esa persona que lo necesita y ayudala a insertarse en el mundo laboral, para ampliar sus conocimientos y formar su camino profesional.
                         
                         Obtendrá acceso al todo el campus con el Plan anual ($20000).
